fixed docker issues and adding git pre commit

--- a/project/generation/webapp/app/src/templates/index.html
+++ b/project/generation/webapp/app/src/templates/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Data Engineering 101</title>
+</head>
+<body>
+   <h1>Welcome to Data Engineering 101</h1>
+   <p>thing</p>
+</body>
+</html>
